connecting with mongo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.data.mongodb.uri=mongodb+srv://gaurav1903arora:JpUj52CUnnVCwcUd@cluster0.kequ9cd.mongodb.net/
+spring.data.mongodb.database=speer
+server.port=8082
