--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,1 @@
-spring.data.mongodb.uri=mongodb+srv://gaurav1903arora:JpUj52CUnnVCwcUd@cluster0.kequ9cd.mongodb.net/
-spring.data.mongodb.database=speer
-server.port=8082
+spring.data.mongodb.uri=mongodb+srv://gaurav1903arora:JpUj52CUnnVCwcUd@cluster0.kequ9cd.mongodb.net/dating-db
