--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.data.mongodb.uri=mongodb+srv://gaurav1903arora:JpUj52CUnnVCwcUd@cluster0.kequ9cd.mongodb.net/dating-db
+spring.data.mongodb.uri=mongodb+srv://gaurav1903arora:JpUj52CUnnVCwcUd@cluster0.kequ9cd.mongodb.net/speer
+
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+
+logging.level.org.mongodb.driver=DEBUG
